--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   height: 100vh;
   width: 100%;
@@ -23,7 +22,8 @@ body {
 }
 
 
-button{
+
+button, input[type=password], input[type=text] {
   background-color: #000000;
   border: 1px solid #555555;
   color: #ffffff;
@@ -32,8 +32,8 @@ button{
   font-size: 16px;
   cursor: pointer;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-
 }
+
 button:hover {
   transform: scale(1.1);
   background-color: #555555;
@@ -41,36 +41,15 @@ button:hover {
   color: #ffffff;
   box-shadow: 4px 4px 10px rgba(250, 250, 250, 0.5);
 }
-hr{
-  border: 1px solid #ffffff;
-}
 
-input[type=password] {
-  background-color: #000000;
-  border: 1px solid #ffffff;
-  color: #ffffff;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 16px;
-  cursor: pointer;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+input[type=password], input[type=text] {
   width: 130px;
   text-align: left;
 }
 
 input[type=text] {
-  background-color: #000000;
-  border: 1px solid #ffffff;
-  color: #ffffff;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 16px;
-  cursor: pointer;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-  width: 130px;
   -webkit-transition: width 0.4s ease-in-out;
   transition: width 0.4s ease-in-out;
-  text-align: left;
 }
 
 input[type=text]:focus {
@@ -78,40 +57,35 @@ input[type=text]:focus {
   text-align: center;
 }
 
-
-
-h1{
+h1 {
   color: #ffffff;
   font-size: 36px;
   font-weight: bold;
   /*margin-top: 50px;*/
+}
 
-}
-.hiden {
-  display: none;
-}
-.hidden {
+.hiden, .hidden {
   display: none;
 }
 
-.fit{
+.fit {
   width: 100%;
   left: 0;
-
 }
-.navebar{
+
+.navebar {
   top: 0;
   width: 100%;
   overflow-x: hidden;
 }
 
-#pass{
+#pass {
   margin: auto;
   text-align: center;
   font-size: 15px;
   border-radius: 25px;
   border: 2px solid #ffffff;
-  padding: 10px; 
+  padding: 10px;
   width: 200px;
-  height: 15px; 
+  height: 15px;
 }
