--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ input[type=text]:focus {
   height: 100vh;
   width: 100%;
   cursor: pointer;
-  background: linear-gradient(45deg, #000000, #000000, #9C27B0, #000000);
+  background: linear-gradient(45deg, #000000, #d1d1d1, #cccccc, #000000);
   background-size: 400% 400%;
   animation: gradientAnimation 15s infinite;
   overflow-x: hidden;
@@ -116,7 +116,7 @@ input[type=text]:focus {
 
 .dark button, input[type=password], input[type=text], #searchInput {
   background-color: #d8d7d7;
-  border: 1px solid #9C27B0;
+  border: 1px solid #535353;
   color: #000000;
   border-radius: 5px;
   padding: 10px;
@@ -128,7 +128,7 @@ input[type=text]:focus {
 .dark button:hover {
   transform: scale(1.1);
   background-color: #d8d7d7;
-  border: 1px solid #9C27B0;
+  border: 1px solid #535353;
   color: #000000;
   box-shadow: 4px 4px 10px rgba(255, 255, 255, 0.5);
 }
@@ -155,7 +155,7 @@ input[type=text]:focus {
   height: 100vh;
   width: 100%;
   cursor: pointer;
-  background: linear-gradient(45deg, #ffffff, #ffffff, #b3ff00, #ffffff);
+  background: linear-gradient(45deg, #ffffff, #949494, #535353, #ffffff);
   background-size: 400% 400%;
   animation: gradientAnimation 15s infinite;
   overflow-x: hidden;
@@ -176,7 +176,7 @@ input[type=text]:focus {
 
 .light button, input[type=password], input[type=text], #searchInput {
   background-color: #000000;
-  border: 1px solid #b3ff00;
+  border: 1px solid #535353;
   color: #ffffff;
   border-radius: 5px;
   padding: 10px;
@@ -188,7 +188,7 @@ input[type=text]:focus {
 .light button:hover {
   transform: scale(1.1);
   background-color: #ffffff;
-  border: 1px solid #b3ff00;
+  border: 1px solid #535353;
   color: #000000;
   box-shadow: 4px 4px 10px rgba(255, 255, 255, 0.5);
 }
