--- a/game_asets/game.css
+++ b/game_asets/game.css
@@ -12,8 +12,14 @@
 .material-symbols-outlined{ float:right}
 .Bside a:hover {left: 0}
 
-.home { top: 20px; background-color: #04AA6D; }
-.qac { top: 80px; background-color: #2196F3; }
+body.gra .home { top: 20px; background-color: #04AA6D; }
+body.gra .qac { top: 80px; background-color: #2196F3; }
+
+body.dark .home { top: 20px; background-color: #00462c; }
+body.dark .qac { top: 80px; background-color: #124e80; }
+
+body.light .home { top: 20px; background-color: #02ffa2; }
+body.light .qac { top: 80px; background-color: #008cff; }
 
 .Qaccess {
   height: 100%;
@@ -43,27 +49,77 @@
 h2{
   color: #ffffff;
   }
-input{
+body.dark button,
+body.dark input[type=password],
+body.dark input[type=text],
+body.dark #searchInput {
+  background-color: #d8d7d7;
+  border: 1px solid #535353;
+  color: #000000;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+}
+body.gra button,
+body.gra input[type=password],
+body.gra input[type=text],
+body.gra #searchInput {
   background-color: #000000;
-  border: 1px solid #ffffff;
+  border: 1px solid #555555;
   color: #ffffff;
   border-radius: 5px;
   padding: 10px;
   font-size: 16px;
   cursor: pointer;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-  transition: transform 0.5s;
+}
+body.light button,
+body.light input[type=password],
+body.light input[type=text],
+body.light #searchInput {
+  background-color: #000000;
+  border: 1px solid #535353;
+  color: #ffffff;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
 }
 iframe{
   width: 100%; 
   height: 100vh;
 }
-
-html {
+.gra{
   height: 100vh;
   width: 100%;
   cursor: pointer;
   background: linear-gradient(45deg, #ff00cc, #00ffcc, #cc00ff, #ff00cc);
+  background-size: 400% 400%;
+  animation: gradientAnimation 15s infinite;
+  overflow-x: hidden;
+  background-attachment: fixed;
+  overflow-y: hidden;
+}
+.dark{
+  height: 100vh;
+  width: 100%;
+  cursor: pointer;
+  background: linear-gradient(45deg, #000000, #949494, #535353, #000000);
+  background-size: 400% 400%;
+  animation: gradientAnimation 15s infinite;
+  overflow-x: hidden;
+  background-attachment: fixed;
+  overflow-y: hidden;
+}
+
+.light{
+  height: 100vh;
+  width: 100%;
+  cursor: pointer;
+  background: linear-gradient(45deg, #ffffff, #bbbbbb, #c9c9c9, #ffffff);
   background-size: 400% 400%;
   animation: gradientAnimation 15s infinite;
   overflow-x: hidden;
@@ -82,3 +138,4 @@ html {
     background-position: 0% 50%;
   }
 }
+
