--- a/style.css
+++ b/style.css
@@ -97,25 +97,11 @@ input[type=text]:focus {
   height: 100vh;
   width: 100%;
   cursor: pointer;
-  background: linear-gradient(45deg, #000000, #949494, #535353, #000000);
+  background: #000;
   background-size: 400% 400%;
-  animation: gradientAnimation 15s infinite;
   overflow-x: hidden;
   background-attachment: fixed;
 }
-
-@keyframes gradientAnimation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
 
 body.dark button,
 body.dark input[type=password],
@@ -161,24 +147,12 @@ body.dark #searchInput {
   height: 100vh;
   width: 100%;
   cursor: pointer;
-  background: linear-gradient(45deg, #ffffff, #bbbbbb, #c9c9c9, #ffffff);
+  background: #fff;
   background-size: 400% 400%;
-  animation: gradientAnimation 15s infinite;
   overflow-x: hidden;
   background-attachment: fixed;
 }
 
-@keyframes gradientAnimation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
 
 body.light button,
 body.light input[type=password],
